# system-design-implement

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  build.gradle  compose-sentinel.yaml  docker-compose.yml  pyproject.toml  requirements.txt  settings.gradle
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: README.md  eslint.config.mjs  prisma.config.ts
backend/src/: main.ts
backend/src/balance/: balance.controller.ts  balance.repository.ts  balance.service.ts  idempotency-cleanup.service.ts  idempotency.repository.ts  transaction-manager.ts
backend/src/balance/dto/: batch-balance-query.dto.ts  create-balance-transactions.dto.ts
backend/src/prisma/: prisma.types.ts
backend/test/balance/: balance.repository.spec.ts  idempotency-cleanup.e2e-spec.ts  snapshots-negative.e2e-spec.ts  transactions-query.e2e-spec.ts
config/: settings.yaml
docs/api/: README.md
docs/deployment/: README.md
financial-system/backend/: .env.example  Dockerfile  README.md  dev.db  package-lock.json  package.json  tsconfig.json
financial-system/backend/prisma/: schema.prisma  schema.sqlite.prisma
financial-system/backend/prisma/pg/: schema.prisma
financial-system/backend/prisma/sqlite/: schema.prisma
financial-system/backend/scripts/: quickstart.bat  quickstart.ps1  quickstart.sh
financial-system/backend/src/: app.module.ts
financial-system/backend/src/balance/: balance-exception.filter.ts  balance.controller.ts  balance.module.ts  balance.repository.spec.ts  balance.repository.ts  balance.service.spec.ts  balance.service.ts  idempotency-cleanup.service.ts  idempotency.repository.spec.ts  idempotency.repository.ts  snapshot.service.ts  transaction-manager.spec.ts  transaction-manager.ts  transaction-query.service.ts
financial-system/backend/src/prisma/: prisma.service.ts
financial-system/backend/src/types/: prisma-shim.d.ts
financial-system/backend/test/: jest-e2e.json  prisma-client.stub.ts
financial-system/backend/test/balance/: balance-concurrency.e2e-spec.ts  balance.service.spec.ts  failure-policy.spec.ts  get-balance-negative.e2e-spec.ts  get-balance-positive.e2e-spec.ts  idempotency-cleanup.e2e-spec.ts  idempotency.repository.spec.ts  overdraft-batch.e2e-spec.ts  snapshot-by-account.e2e-spec.ts  snapshot-by-request.e2e-spec.ts  snapshot.service.spec.ts  (+3 more)
financial-system/specs/001-balance-module/: plan.md  quickstart.md  tasks.md
specs/001-balance-module/: data-model.md  research.md  spec.md  tasks.md
src/: main.py
src/api/routes/: chat.py  documents.py  health.py  sessions.py
src/config/: settings.py
src/main/resources/: application-dev.yml  application-prod-sentinel.yml  application-prod.yml  application.yml
src/models/database/: models.py
src/services/: base_service.py  rag_service.py
src/utils/: logging.py
tests/: conftest.py
tests/unit/: test_chat.py  test_health.py
(+10 files in other folders)
